complete logging + video rendering

--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@ form {
       <form action="/login" method="POST" align="center">
        <table>
         <tr>
-         <td>Your nickname :</td> <td><input type="user_id" name="user_id" placeholder="Your Nickname"></td><br>
+         <td>Your nickname :</td> <td><input type="user_id" name="user_id" placeholder="Your Nickname" value="{{ prefilled_player_name }}"></td><br>
         </tr>
         <tr>
          <td></td> <td><input type="submit" value="Play"></td>
