--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="icon" type="image/x-icon" href="/get_website_img/icon_32x32.ico" />
     <meta name="google-site-verification" content="AGv6-oAzp9IVs77FmhhlL7grLMvB1PB0-dtf6Hqr13I" />
     <meta name="viewport" content="width=device-width"/>
+    
     
     <title>Crazyplanes: A free MMO webgame!</title>
     
