--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@ form {
 </style>
 </head>
 <body>
-    <br><h1>Play the game ! </h1>
+    <br><h1>Press play to join the game ! </h1>
     <p>{{ context_info }}</p>
       <form action="/login" method="POST" align="center">
        <table>
