--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,27 @@ p, ul, ol { font-size: 16px; font-weight: normal; margin-bottom: 20px; }
                         <p>I am planning on putting a comment section here.</p>
                         
                         <p><em>- Adam </em></p>
+                        <div id="disqus_thread"></div>
+                        <script>
 
+                        /**
+                        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+                        /*
+                        var disqus_config = function () {
+                        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                        };
+                        */
+                        (function() { // DON'T EDIT BELOW THIS LINE
+                        var d = document, s = d.createElement('script');
+                        s.src = 'https://crazyplanes-ai-mmo-games.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                        })();
+                        </script>
+                        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                                                    
                     </td>
                 </tr>
             </table>
@@ -156,5 +176,6 @@ p, ul, ol { font-size: 16px; font-weight: normal; margin-bottom: 20px; }
         </td>
     </tr>
 </table>
+<script id="dsq-count-scr" src="//crazyplanes-ai-mmo-games.disqus.com/count.js" async></script>
 </body>
 </html>
